<resources>
    <string name="app_name">Exercicio4</string>
    <string name="texto">Texto</string>
    <string name="rosa">Rosa</string>
    <string name="verde">Verde</string>
    <string name="azul">Azul</string>
    <string name="tamLetra">Tamanho da Letra</string>
    <string name="estilo">Estilo</string>
    <string name="chkNegrito">Negrito</string>
    <string name="chkItalico">Itálico</string>
    <string name="chkMaiusculas">Maiúsculas</string>
    <string name="corLetra">Cor da Letra</string>
    <string name="tamanho">tamanho</string>
</resources>